tests/ui/generic-associated-types/issue-68656-unsized-values.stderr
error[E0271]: type mismatch resolving `<T as Deref>::Target == T`
  --> $DIR/issue-68656-unsized-values.rs:13:21
   |
LL | impl<T: Copy + std::ops::Deref> UnsafeCopy<T> for T {
   |      - this type parameter
LL |     type Item<'a> = T;
   |                     ^ expected type parameter `T`, found associated type
   |
   = note: expected type parameter `T`
             found associated type `<T as Deref>::Target`
note: required by a bound in `UnsafeCopy::Item`
  --> $DIR/issue-68656-unsized-values.rs:4:36
   |
LL |     type Item<'a>: std::ops::Deref<Target = T>;
   |                                    ^^^^^^^^^^ required by this bound in `UnsafeCopy::Item`
help: consider further restricting this bound
   |
LL | impl<T: Copy + std::ops::Deref<Target = T>> UnsafeCopy<T> for T {
   |                               ++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
